src/test/fun-test/semantic/ExplicitAccess.java.err
Semantic error: access chain must be written explicitly, line 14, pos 15
